# Spectrix

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  makefile
.github/workflows/: ci.yml  release.yml
cmake/: CompilerWarnings.cmake
source/: CMakeLists.txt  FFTProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  StaticFFTProcessor.h
source/DSP/: CompressionCurve.h  FFTProcessor.h  GaussianResponseCurve.h  OLDFFTProcessor.h  SpectralCompressor.h  SpectralProcessors.h  SpectralVisualizer.h
source/UI/: Theme.h
source/UI/Components/: GainReductionVisualizer.h  Meters.h  ResponseCurve.h  Spectrum.h  SpectrumGrid.h
source/UI/Sections/: CompressorControls.h  CompressorModeSection.h  GainControls.h  Metering.h  SpectrumSection.h
source/UTILS/: CircularBuffer.h  UIUtilities.h  UIutils.h
test/: analyzer.py  idleTest.py  pyproject.toml  signals.py  test.sh
